--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -17,3 +17,19 @@ layout: default
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
 </section>
 {% endif %}
+
+{% if  page.comments == true %}
+<section>
+ {% include post/duoshuo.html %}
+  </section>
+{% endif %}
+</div>
+{% unless page.sidebar == false %}
+<aside class="sidebar">
+  {% if site.page_asides.size %}
+    {% include_array page_asides %}
+  {% else %}
+    {% include_array default_asides %}
+  {% endif %}
+</aside>
+{% endunless %}
