--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -13,3 +13,21 @@ single: true
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
 </section>
 {% endif %}
+
+  </footer>
+  </article>
+{% if page.comments == true %}
+  <section>
+   {% include post/duoshuo.html %}
+  </section>
+ {% endif %}
+</div>
+{% unless page.sidebar == false %}
+<aside class="sidebar">
+  {% if site.post_asides.size %}
+    {% include_array post_asides %}
+  {% else %}
+    {% include_array default_asides %}
+  {% endif %}
+</aside>
+{% endunless %}
