--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -5,6 +5,11 @@
 		{% if site.disqus_short_name and site.disqus_show_comment_count == true %}
 			<span class="comments"><a href="{{ root_url }}{{ post.url }}#disqus_thread">评论</a></span>
 		{% endif %}
+
+		{% if site.duoshuo_short_name and page.comments != false and post.comments != false and site.duoshuo_comments == true %}
+				<span class="comments"><a href="{{ root_url }}{{ post.url }}#comments">评论</a></span>
+         {% endif %}
+		
 	</div>
 	<h1 class="title" itemprop="name"><a href="{{ root_url }}{{ post.url }}" itemprop="url">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
 	<div class="entry-content" itemprop="articleBody">
