--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -14,20 +14,10 @@ single: true
 </section>
 {% endif %}
 
-  </footer>
-  </article>
+<!--添加多说模块-->
 {% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
-  <section>
-   <div id="评论" aria-live="polite">{% include post/duoshuo.html %}</div>
+  <section id="评论">
+    <!-- <h1 class="title">评论:</h1> -->
+    <div id="评论" aria-live="polite">{% include post/duoshuo.html %}</div>
   </section>
- {% endif %}
-
-{% unless page.sidebar == false %}
-<aside class="sidebar">
-  {% if site.post_asides.size %}
-    {% include_array post_asides %}
-  {% else %}
-    {% include_array default_asides %}
-  {% endif %}
-</aside>
-{% endunless %}
+{% endif %}
