--- a/source/_includes/post/duoshuo.html
+++ b/source/_includes/post/duoshuo.html
@@ -3,7 +3,7 @@
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-    var duoshuoQuery = {short_name:"9077079"};
+    var duoshuoQuery = {short_name:"githubtest0927"};
     (function() {
 
         var ds = document.createElement('script');
